--- a/pixi.toml
+++ b/pixi.toml
@@ -6,8 +6,8 @@ platforms = ["osx-arm64"]
 version = "0.1.0"
 
 [tasks]
-journal-ui = "streamlit run streamlit_app.py --server.headless false --theme.base light"
-journal-cli = "python interactive_journal.py"
+journal-ui = "streamlit run src/streamlit_app.py --server.headless false --theme.base light"
+journal-cli = "python src/interactive_journal.py"
 
 [dependencies]
 pydantic-ai = "*"
